--- a/src/components/Pages/Service/Srervice.css
+++ b/src/components/Pages/Service/Srervice.css
@@ -10,3 +10,15 @@
   background-color: white !important;
   border: none !important;
 }
+/* .card-f:hover {
+  background-color: rgba(169, 255, 236, 0.13) !important;
+} */
+.details-btn:hover {
+  color: rgb(220, 53, 69) !important;
+  font-weight: 700 !important;
+}
+.card-3:hover {
+  background-color: rgba(125, 250, 250, 0.13) !important;
+  transition: all 0.2s ease-out;
+  box-shadow: 0px 4px 8px rgb(78, 78, 78);
+}
