service page done

--- a/src/components/Pages/Service/Srervice.css
+++ b/src/components/Pages/Service/Srervice.css
@@ -14,7 +14,7 @@
   background-color: rgba(169, 255, 236, 0.13) !important;
 } */
 .details-btn:hover {
-  color: rgb(220, 53, 69) !important;
+  color: rgba(220, 53, 70, 0.808) !important;
   font-weight: 700 !important;
 }
 .card-3:hover {
