--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,11 @@
   color: rgb(13, 202, 240) !important;
 }
 
-.menu a:focus {
+.menu a:focus,
+.menu a:active {
   color: rgb(220, 53, 69) !important;
+}
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .show > .nav-link {
+  color: rgb(220, 53, 69);
 }
